# winit_vulkan_2

./: Cargo.toml  imgui.ini
shaders/: draw_texture_fs.glsl  fill_screen_vs.glsl  sky_fs.glsl
src/: main.rs  sysinfo.rs
src/game/: camera.rs  camera_controller.rs  mod.rs
src/gui/: mod.rs
src/input/: mod.rs
src/render_context/: config.rs  config2.rs  draw_texture.rs  mod.rs
src/render_context/render_pass/: final_single_pass.rs  mod.rs  single_pass.rs
src/render_context/renderer/: camera.rs  fill_screen.rs  mod.rs  sky.rs
src/render_context/renderer/render_pass/: final_single_pass.rs  single_pass.rs
src/vulkan/: config.rs  mod.rs
