[package]
name = "winit_vulkan_2"
version = "0.1.0"
edition = "2024"

[dependencies]
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
nalgebra = { version = "0.34.1", features = ["bytemuck"] }
raw-window-handle = "0.6.2"
sysinfo = "0.37.2"
vulkano = "0.35.2"
vulkano-shaders = "0.35.0"
winit = "0.30.13"
